--- a/css/styles.scss
+++ b/css/styles.scss
@@ -94,3 +94,11 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
   font-size: xx-large;
   font-family: Zodiak;
 }
+
+.tid {
+  font-family: Zodiak;
+}
+
+button {
+  font-family: Zodiak;
+}
