--- a/css/styles.scss
+++ b/css/styles.scss
@@ -95,10 +95,6 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
   font-family: Zodiak;
 }
 
-.tid {
-  font-family: Zodiak;
-}
-
-button {
+.btn {
   font-family: Zodiak;
 }
