--- a/css/styles.scss
+++ b/css/styles.scss
@@ -84,7 +84,10 @@ body {
   font-family: Zodiak;
 }
 
-.modal-header,
-.modal-footer {
-  border: none !important;
+.modal-header{
+  border: none;
+}
+
+.modal-footer{
+  border: none;
 }
