--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,8 +26,7 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 // 5. Du kan lave styling her...
 
 body {
-  font-family: Zodiak;
-  font-weight: normal;
+  font-family: Zodiak-Regular, serif;
 }
 
 @font-face {
