--- a/css/styles.scss
+++ b/css/styles.scss
@@ -151,8 +151,7 @@ body {
 
 @media (max-width: 767.98px) {
   .navbar.custom-border {
-    border: 0 !important;
-    box-shadow: none !important;
+    border-top: 2px solid #715b4c;
   }
 }
 
