--- a/css/styles.scss
+++ b/css/styles.scss
@@ -206,10 +206,7 @@ body {
   z-index: 1;
 }
 
-.overskrift {
-  font-family: Zodiak;
-}
 
 .fed {
-  font-family: 'Zodiak-Bold';
+  font-family: 'Zodiak-Bold', 'serif';
 }
