--- a/css/styles.scss
+++ b/css/styles.scss
@@ -163,6 +163,20 @@ body {
   }
 }
 
+@media (max-width: 767.98px) {
+  .custom-border {
+    border-top: 2px solid #715b4c;
+  }
+}
+
+
+@media (min-width: 768px) {
+  .custom-border {
+    border-top: 2px solid #715b4c;
+    border-bottom: 2px solid #715b4c;
+  }
+}
+
 .btn {
   font-family: Zodiak;
 }
