--- a/css/styles.scss
+++ b/css/styles.scss
@@ -192,10 +192,8 @@ body {
 @media (max-width: 767.98px) {
   .monstera-bg {
     position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 10%;
-    opacity: 0.1;
+    opacity: 0.3;
+    width: 100%;
     z-index: -1;
     pointer-events: none;
   }
@@ -205,17 +203,15 @@ body {
 @media (min-width: 768px) {
   .monstera-bg {
     position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 40%;
-    opacity: 0.1;
+    opacity: 0.3;
+    width: 90%;
     z-index: -1;
     pointer-events: none;
   }
 
 }
 
-.text {
+.text-overlay {
   position: relative;
   z-index: 1;
 }
