--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,8 +13,8 @@ $link-decoration: none;
 // 4. Include any default map overrides here
 $custom-colors: (
         "wh": #F5EFE3,
-        "db": #2A1813,
-        "lb": #715b4c,
+        "db": #40291C,
+        "lb": #664B3C,
         "gr": #86A687,
         "wd": #EBE0CF,
 );
