--- a/css/styles.scss
+++ b/css/styles.scss
@@ -322,6 +322,6 @@ font-family: 'Zodiak-BoldItalic', 'serif';
   transform: scale(1.02); /* Lille effekt ved hover */
 }
 
-.carousel-control-next, .carousel-control-prev {
+.carousel-control-next-icon, .carousel-control-prev-icon {
   color: #2A1813;
 }
