--- a/css/styles.scss
+++ b/css/styles.scss
@@ -149,6 +149,10 @@ body {
   }
 }
 
+.cBorder {
+  border-top: 2px solid #715b4c;
+}
+
 @media (max-width: 767.98px) {
   .navbar.custom-border {
     border-top: 2px solid #715b4c;
@@ -327,8 +331,4 @@ font-family: 'Zodiak-BoldItalic', 'serif';
 
 .btn-wd:hover {
   transform: scale(1.02); /* Lille effekt ved hover */
-}
-
-.carousel-control-next-icon, .carousel-control-prev-icon {
-  color: #2A1813;
 }
