--- a/css/styles.scss
+++ b/css/styles.scss
@@ -153,6 +153,11 @@ body {
   border-top: 2px solid #715b4c;
 }
 
+.cuBorder {
+  border-top: 2px solid #715b4c;
+  border-bottom: 2px solid #715b4c;
+}
+
 @media (max-width: 767.98px) {
   .navbar.custom-border {
     border-top: 2px solid #715b4c;
@@ -385,4 +390,29 @@ font-family: 'Zodiak-BoldItalic', 'serif';
 
 .btn-text{
 text-decoration: underline;
+}
+
+@media (max-width: 767.98px) {
+  .navlink {
+    border: none !important;
+    background-color: #ebe0cf;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    text-align: center;
+    width: auto;
+    white-space: nowrap;
+    font-size: 0.95rem;
+  }
+
+  .nav {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.5rem;
+    padding: 1rem;
+    border: none;
+  }
+}
+
+.btn-outline-gr:hover {
+  color:#F5EFE3 !important;
 }
