--- a/css/styles.scss
+++ b/css/styles.scss
@@ -416,3 +416,7 @@ text-decoration: underline;
 .btn-outline-gr:hover {
   color:#F5EFE3 !important;
 }
+
+.btn-outline-db:hover {
+  color:#F5EFE3 !important;
+}
