--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,102 +26,99 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 // 5. Du kan lave styling her...
 
 
-@font-face {
-  font-family: 'Zodiak-Variable';
-  src: url('../fonts/Zodiak-Variable.woff') format('woff');
-  font-weight: 100 900;
-  font-display: swap;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Zodiak-VariableItalic';
-  src: url('../fonts/Zodiak-VariableItalic.woff') format('woff');
-  font-weight: 100 900;
-  font-display: swap;
-  font-style: italic;
-}
 
 @font-face {
   font-family: 'Zodiak-Thin';
-  src: url('../fonts/Zodiak-Thin.woff') format('woff');
+  src: url('../fonts/Zodiak-Thin.woff2') format('woff2'),
+  url('../fonts/Zodiak-Thin.woff') format('woff');
   font-weight: 100;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'Zodiak-ThinItalic';
-  src: url('../fonts/Zodiak-ThinItalic.woff') format('woff');
+  src: url('../fonts/Zodiak-ThinItalic.woff2') format('woff2'),
+  url('../fonts/Zodiak-ThinItalic.woff') format('woff');
   font-weight: 100;
   font-display: swap;
   font-style: italic;
 }
 @font-face {
   font-family: 'Zodiak-Light';
-  src: url('../fonts/Zodiak-Light.woff') format('woff');
+  src: url('../fonts/Zodiak-Light.woff2') format('woff2'),
+  url('../fonts/Zodiak-Light.woff') format('woff');
   font-weight: 300;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'Zodiak-LightItalic';
-  src: url('../fonts/Zodiak-LightItalic.woff') format('woff');
+  src: url('../fonts/Zodiak-LightItalic.woff2') format('woff2'),
+  url('../fonts/Zodiak-LightItalic.woff') format('woff');
   font-weight: 300;
   font-display: swap;
   font-style: italic;
 }
 @font-face {
   font-family: 'Zodiak-Regular';
-  src: url('../fonts/Zodiak-Regular.woff') format('woff');
+  src: url('../fonts/Zodiak-Regular.woff2') format('woff2'),
+  url('../fonts/Zodiak-Regular.woff') format('woff');
   font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'Zodiak-Italic';
-  src: url('../fonts/Zodiak-Italic.woff') format('woff');
+  src: url('../fonts/Zodiak-Italic.woff2') format('woff2'),
+  url('../fonts/Zodiak-Italic.woff') format('woff');
   font-weight: 400;
   font-display: swap;
   font-style: italic;
 }
 @font-face {
   font-family: 'Zodiak-Bold';
-  src: url('../fonts/Zodiak-Bold.woff') format('woff');
+  src: url('../fonts/Zodiak-Bold.woff2') format('woff2'),
+  url('../fonts/Zodiak-Bold.woff') format('woff');
   font-weight: 700;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'Zodiak-BoldItalic';
-  src: url('../fonts/Zodiak-BoldItalic.woff') format('woff');
+  src: url('../fonts/Zodiak-BoldItalic.woff2') format('woff2'),
+  url('../fonts/Zodiak-BoldItalic.woff') format('woff');
   font-weight: 700;
   font-display: swap;
   font-style: italic;
 }
 @font-face {
   font-family: 'Zodiak-Extrabold';
-  src: url('../fonts/Zodiak-Extrabold.woff') format('woff');
+  src: url('../fonts/Zodiak-Extrabold.woff2') format('woff2'),
+  url('../fonts/Zodiak-Extrabold.woff') format('woff');
   font-weight: 800;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'Zodiak-ExtraboldItalic';
-  src: url('../fonts/Zodiak-ExtraboldItalic.woff') format('woff');
+  src: url('../fonts/Zodiak-ExtraboldItalic.woff2') format('woff2'),
+  url('../fonts/Zodiak-ExtraboldItalic.woff') format('woff');
   font-weight: 800;
   font-display: swap;
   font-style: italic;
 }
 @font-face {
   font-family: 'Zodiak-Black';
-  src: url('../fonts/Zodiak-Black.woff') format('woff');
+  src: url('../fonts/Zodiak-Black.woff2') format('woff2'),
+  url('../fonts/Zodiak-Black.woff') format('woff');
   font-weight: 900;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'Zodiak-BlackItalic';
-  src: url('../fonts/Zodiak-BlackItalic.woff') format('woff');
+  src: url('../fonts/Zodiak-BlackItalic.woff2') format('woff2'),
+  url('../fonts/Zodiak-BlackItalic.woff') format('woff');
   font-weight: 900;
   font-display: swap;
   font-style: italic;
